[package]
authors = ["Sean Leffler <sean@errno.com>"]
categories = ["api-bindings", "asynchronous", "concurrency", "database"]
description = "A type-safe, high-level interface to librados using the low-level C bindings from ceph-rust."
documentation = "https://docs.rs/rad/"
homepage = "https://github.com/sdleffler/rad-rs/"
keywords = ["librados", "rados", "ceph", "safe", "storage"]
license = "MPL-2.0"
name = "rad"
readme = "README.md"
repository = "https://github.com/sdleffler/rad-rs/"
version = "0.1.1"

[dependencies]
ceph-rust = "0.1.16"
chrono = "0.3.1"
error-chain = "0.10.0"
futures = "0.1.14"
libc = "0.2.23"

[features]
integration-tests = []
