[package]
authors = ["Sean Leffler <sean@errno.com>"]
categories = ["api-bindings", "asynchronous", "concurrency", "database"]
description = "A type-safe, high-level interface to librados using the low-level C bindings from ceph-rust."
documentation = "https://docs.rs/rad/"
homepage = "https://github.com/sdleffler/rad-rs/"
keywords = ["librados", "rados", "ceph", "safe", "storage"]
license = "MPL-2.0"
name = "rad"
readme = "README.md"
repository = "https://github.com/sdleffler/rad-rs/"
version = "0.5.0"

[dependencies]
ceph = "3"
chrono = "0.4.0"
error-chain = "0.11.0"
ffi-pool = "0.1.1"
futures = "0.1.16"
lazy_static = "0.2.8"
libc = "0.2.23"
stable_deref_trait = "1.0.0"

[dev-dependencies]
rand = "0.3.16"

[features]
integration-tests = []
